# Palantir

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  airflow.cfg  alter_users_columns.py  auto_git_sync.py  check_duckdb_users.py  codex_wrapper.py  compatible.txt  docker-compose.yml  gx_create_suite.py  gx_register_duckdb.py  gx_register_users_asset.py  gx_suites.py  incompatible.txt  palantir_local_env_cursor_codex.md  process_diagram.py  pyproject.toml  requirements.txt  workflow_state.md
analysis/: __init__.py  generate_sample_data.py  mcp_init.py  mcp_integration.py  nl_interface.py  run_codebase_tutorial.py
backend/: main.py
common/: config_loader.py  helpers.py  logging_config.py  neo4j_utils.py  path_utils.py
config/: ai_tools.yaml  airflow.yaml  api.yaml  api_keys.json  app_config.json  codex_config.json  codex_config.yaml  integrated_mcp_config.json  llm.yaml  mcp_config.json  mcp_tools.json  neo4j.yaml  neo4j_ontology.n10s.yml  onedrive.yaml  quality.yaml  rag.yaml  youtube_config.py
dash_app/: app.py
data/: customer_data.csv  marketing_data.csv  product_data.csv  sales_data.csv
docker/: airflow.Dockerfile
docs/: ai_integration_guide.md  codex_examples.md  comprehensive_project_guide.md  cursor_prompts.md  development_workflow.md  directory_structure.md  document_integration_guide.md  documentation_maintenance.md  lineage_and_etl.md  ontology_guide.md  project_plan.md  quick_start_ai.md  quick_start_architecture.md  quick_start_codex.md  quick_start_cursor.md  quick_start_document.md  quick_start_etl.md  (+4 more)
(+172 files in other folders)
